GNOME Bugzilla – Bug 747684
[wayland] phantom key events
Last modified: 2015-09-01 15:03:58 UTC
Distro: Arch Linux # Overview When I run gnome-shell using wayland (using the option in gdm) and run gnome-terminal, if I run glxgears from the terminal and then exit glxgears the terminal starts behaving as if I was holding down enter button inside the terminal so I start seeing my shell prompt appearing over and over again. It stops if I press enter on my keyboard # Steps to reproduce 1. Start gnome-shell using wayland from gdm 2. launch gnome-terminal 3. run glxgears inside the terminal 4. exit glxgears by closing the glxgears window # Actual results After doing the above my shell prompt (i.e. $PS1 ) keeps repeats over and over again (just like what would happen if I held down the enter key in the terminal). It stops doing this if I press enter on my keyboard # Expected results Closing the glxgears window should not cause gnome-terminal to start repeating my shell prompt infinitely
So something is sending those key events; that's not gnome-terminal's fault.
It probably isn't gnome-terminal's fault but this seemed like the easiest category to put it under initially because I don't know how xwayland and wayland talk to each other. I don't see the issue when I run gnome-terminal under the normal gnome-shell (i.e. under X) so presumably the issue is something to do with gnome-shell and xwayland. The "key events" thing is just a guess at what's happening. I don't have the expertise to debug this without guidance. If you can suggest a way I can check this I can take a look.
-> gtk+
still happening
I've seen this as well; this should quite trivially fix it - http://hastebin.com/radeqajupo.coffee
The patch from comment #5 was committed after mclasen made some stylistic changes to the tree: https://git.gnome.org/browse/gtk+/commit/?id=690a11b5b8a4d97b844cdbd82891e6c18a20f802 You're welcome.